# Kern

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Kern.txt  LICENSE.txt  README.md
data/: HttpPostJsonTemplate.txt  ImplementSystemPrompt.txt  MainSystemPrompt.txt  PayloadTemplate.json  ResearchSystemPrompt.txt  SystemPrompt.txt
src/: FileUtilities.cpp  FileUtilities.h  FileValidation.cpp  FileValidation.h  NetworkUtilities.cpp  NetworkUtilities.h  Session.cpp  Session.h  StringUtilities.cpp  StringUtilities.h  ToolUtilities.cpp  ToolUtilities.h  main.cpp
src/Tools/: edit_file_lines.h  glob.h  grep.h  implement.h  read_file chunk.h  read_file.h  read_file_chunk.h  research.h  subagent.h  write_file.h
tests/: CMakeLists.txt  FileUtilitiesTests.cpp  FileValidationTests.cpp  StringUtilitiesTests.cpp  TestUtilities.cpp  TestUtilities.h
